--- a/WebEscuela/WebEscuela/Plantillas/plantillaLogin.Master
+++ b/WebEscuela/WebEscuela/Plantillas/plantillaLogin.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site1.master.cs" Inherits="WebEscuela.Site1" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="plantillaLogin.master.cs" Inherits="WebEscuela.Plantillas.plantillaLogin" %>
 
 <!DOCTYPE html>
 
