--- a/WebEscuela/WebEscuela/Plantillas/plantillaPrincipal.Master
+++ b/WebEscuela/WebEscuela/Plantillas/plantillaPrincipal.Master
@@ -5,17 +5,31 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title></title>
+
+    <title>Escuela Palestina</title>
+    <link type="text/css" rel="stylesheet" />
+
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <form id="form1" runat="server">
     <div>
         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-        
         </asp:ContentPlaceHolder>
     </div>
-    </form>
+
+    <div id="portada-img">
+
+    </div>
+
+        <ul>
+                <li>Quienes Somos</li>
+                <li>Mision</li>
+                <li>Vision</li>
+                <li>Personal Academico</li>
+                <li>Proyecto Convivencia Escolar</li>
+                <li>Proyecto Educacional Institucional</li>
+         </ul>
+    
 </body>
 </html>
