--- a/WebEscuela/WebEscuela/css/PrincipalCss.css
+++ b/WebEscuela/WebEscuela/css/PrincipalCss.css
@@ -1,47 +1,142 @@
-﻿body {
-    text-align:center
+﻿* {
+    margin: 0px;
+    padding: 0px;
 }
 
-nav{
+h1 {
+    font: bold 20xp verdana, sans-serif;
+}
+
+h2 {
+    font: bold 14px verdana, sans-serif;
+}
+
+header, section, footer, aside, nav, article {
     display: block;
 }
 
-nav ul{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    padding-right: 20px;
+header nav {
+    width: 100%;
+    height: 150px;
+    overflow: hidden;
+    position: relative;
 }
 
-nav ul li{
-    display: inline-block;
-    line-height: 80px;
+nav {
+    top: -20px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 20px auto;
+    max-width: 1000px;
+    width: 90%;
 }
 
-nav ul li a{
-     display: block;
-     padding: 0 10px;
-     text-decoration: none;
+
+nav > ul {
+    display: table;
+    width: 100%;
+    background: #000;
+    position: relative;
 }
 
-#main-header{
-    background: #333;
-    color: white;
-    height: 80px;
+nav > ul li {
+    display: table-cell;
+}
+
+nav > ul > li:hover > ul {
+    display:block;
+    height: 100%;
+}
+
+nav > ul > li > ul {
+    display: block;
+    position: absolute;
+    background: #000;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+    height: 0%;
+    transition:all .3s ease;
+}
+
+nav > ul li a {
+    color: #fff;
+    display:block;
+    line-height: 20px;
+    padding:20px;
+    position:relative;
+    text-align: center;
+    text-decoration: none;
+    transition:all .3s ease;
+}
+
+nav > ul > li > a span {
+    background: #174459;
+    display: block;
+    height: 100%;
     width: 100%;
     left: 0;
-    top: 0;
-    position: fixed;
+    position: absolute;
+    top: -55px;
 }
 
-#main-header a{
-    color: white;
+nav > ul > li > a span .icon {
+    display:block;
+    line-height: 60px;
 }
 
-#portada-img{
-
+nav > ul > li > a:hover > span {
+    top:0;    
+    transition:all .3s ease;
 }
 
-#panel-navegacion{
+nav > ul > li > ul > li a:hover {
+    background: #5da5a2;
+}
 
+body {
+    text-align: center;
+    background: url(../src/img-body-bg.gif) 0 0 repeat;
+}
+
+#agrupar {
+    width: 960px;
+    margin: 15px auto;
+    text-align: left;
+}
+
+#cabecera {
+    background: #fffbb9;
+    border: 1px solid #999999;
+    padding: 20px;
+}
+
+#menu {
+}
+
+#menu li {
+    list-style: none;
+    font: bold 14px verdana, sans-serif;
+}
+
+#seccion {
+    float: left;
+    width: 660px;
+    margin: 20px;
+}
+
+#columna {
+    float: left;
+    width: 220px;
+    margin: 20px 0px;
+    padding: 20px;
+    background: #cccccc;
+}
+
+#pie {
+    clear: both;
+    text-align: center;
+    padding: 20px;
+    border-top: 2px solid #999999;
 }
