--- a/WebEscuela/WebEscuela/css/PrincipalCss.css
+++ b/WebEscuela/WebEscuela/css/PrincipalCss.css
@@ -17,7 +17,7 @@ header, section, footer, aside, nav, article {
 
 header nav {
     width: 100%;
-    height: 150px;
+    height: 120px;
     overflow: hidden;
     position: relative;
 }
@@ -128,9 +128,12 @@ body {
 
 #columna {
     float: left;
-    width: 220px;
-    margin: 20px 0px;
-    padding: 20px;
+    width: 240px;
+    margin: 10px 0px;
+    padding: 10px;
+}
+
+#subcolumna {
     background: #cccccc;
 }
 
@@ -157,4 +160,56 @@ body {
 
 .button span {
     margin-right: 10px;
+}
+
+.title {
+    background: url(../src/background-title.png) repeat-x center top;
+    height: 109px;
+    width: 100%;
+    float: left;
+    position: relative;
+    text-shadow: #000 0px 2px 0px;
+    
+}
+
+.title > h1 {
+    font-size: 42px;
+    font-weight: bold;
+    text-shadow: #fff 0px 1px 0px;
+    margin-top: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
+    display: block;
+    color: #fff;
+    text-align: center;
+}
+
+.n {
+    padding: 5px;
+}
+
+.portada {
+    text-align: center;
+    margin-top: -60px;
+}
+
+div .hr {
+    border-bottom-style: solid;
+    border-color: #cccccc;
+    height: 1px;
+    margin: 25px 0;
+    display: block;
+    padding-top: 79px;
+}
+
+.body {
+    text-align: justify;
+}
+
+.escudo {
+    text-align: center;
+}
+
+.facebook {
+    width: 240px;
 }
