--- a/WebEscuela/WebEscuela/Plantillas/plantillaPanel.Master
+++ b/WebEscuela/WebEscuela/Plantillas/plantillaPanel.Master
@@ -4,18 +4,31 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title></title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
     <asp:ContentPlaceHolder ID="head" runat="server">
+        <title></title>
     </asp:ContentPlaceHolder>
+
+    <link rel="stylesheet" href="../css/PanelCss.css"/>
+    <link rel="icon" type="image/png" href="../src/image.png" />
+
 </head>
 <body>
-    <form id="form1" runat="server">
+    
     <div>
-        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-        
-        </asp:ContentPlaceHolder>
+
+        <section id="cuerpo">
+
+        </section>
+
+         <aside id="columna">
+
+         </aside>
+
     </div>
-    </form>
+
+    
+
 </body>
 </html>
